--- a/Module1/ss9_cauTrucDk2/bai_tap/mayTinhDonGian.html
+++ b/Module1/ss9_cauTrucDk2/bai_tap/mayTinhDonGian.html
@@ -19,14 +19,14 @@
         }
         input{
             width: 298px;
-            height: 34px;
+            height: 36
+            px;
             font-size: 38px;
             font-weight: 500;
         }
     </style>
 </head>
 <body>
-    <form action=""  >
         <table >
             <tr>
                 <td colspan="4" >
@@ -36,13 +36,13 @@
             </tr>
             <tr>
                 <td>
-                    <button onclick="number" value="1">1</button>
+                    <button id="1" onclick="number1()" value="1">1</button>
                 </td>
                 <td>
-                    <button onclick="number" value="2" >2</button>
+                    <button id="2" onclick="number2()" value="2" >2</button>
                 </td>
                 <td>
-                    <button onclick="number" value="3">3</button>
+                    <button onclick="number()" value="3">3</button>
                 </td>
                 <td>
                     <button>+</button>
@@ -50,13 +50,13 @@
             </tr>
             <tr>
                 <td>
-                    <button onclick="number" value="4">4</button>
+                    <button onclick="number()" value="4">4</button>
                 </td>
                 <td>
-                    <button onclick="number" value="5">5</button>
+                    <button onclick="number()" value="5">5</button>
                 </td>
                 <td>
-                    <button onclick="number" value="6">6</button>
+                    <button onclick="number()" value="6">6</button>
                 </td>
                 <td>
                     <button>-</button>
@@ -64,13 +64,13 @@
             </tr>
             <tr>
                 <td>
-                    <button onclick="number" value="7">7</button>
+                    <button onclick="number()" value="7">7</button>
                 </td>
                 <td>
-                    <button onclick="number" value="8">8</button>
+                    <button onclick="number()" value="8">8</button>
                 </td>
                 <td>
-                    <button onclick="number" value="9">9</button>
+                    <button onclick="number()" value="9">9</button>
                 </td>
                 <td>
                     <button>x</button>
@@ -81,7 +81,7 @@
                     <button>C</button>
                 </td>
                 <td>
-                    <button onclick="number" value="0">0</button>
+                    <button onclick="number()" value="0">0</button>
                 </td>
                 <td>
                     <button>=</button>
@@ -91,10 +91,11 @@
                 </td>
             </tr>
         </table>
-    </form>
 
     <script>
-        var num=document.getElementById
+        function number1(){
+            document.getElementById("input").value =document.getElementById("1").value
+        }
     </script>
 </body>
 </html>
